<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.register.RegisterFragment">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <!--Img User-->
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15mdp"
                android:src="@drawable/mov"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!--Name-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameInput"
                style="@style/CustomFilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20mdp"
                android:layout_marginTop="@dimen/_30mdp"
                android:hint="@string/name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgUser">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameEdt"
                    style="@style/TextViewLightStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12font_mdp" />
            </com.google.android.material.textfield.TextInputLayout>


            <!--Email-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailInput"
                style="@style/CustomFilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20mdp"
                android:layout_marginTop="@dimen/_25mdp"
                android:hint="@string/email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nameInput">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEdt"
                    style="@style/TextViewLightStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:textSize="@dimen/_12font_mdp" />
            </com.google.android.material.textfield.TextInputLayout>


            <!--Password-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passInput"
                style="@style/CustomFilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20mdp"
                android:layout_marginTop="@dimen/_25mdp"
                android:hint="@string/Password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailInput"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/philippineSilver">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passEdt"
                    style="@style/TextViewLightStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12font_mdp" />
            </com.google.android.material.textfield.TextInputLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSubmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15mdp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/register"
        android:textColor="@color/raisinBlack"
        android:textSize="@dimen/_14mdp"
        android:textStyle="bold"
        app:backgroundTint="@color/yellowTheme"
        app:cornerRadius="@dimen/_12mdp"
        app:fontPath="fonts/fontfarsimed.ttf"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/scrollView"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminateTint="@color/yellowTheme"
        app:layout_constraintBottom_toBottomOf="@+id/btnSubmit"
        app:layout_constraintEnd_toEndOf="@+id/btnSubmit"
        app:layout_constraintStart_toStartOf="@+id/btnSubmit"
        app:layout_constraintTop_toBottomOf="@+id/scrollView" />

</androidx.constraintlayout.widget.ConstraintLayout>